# service-extensions

./: .bazelrc  .gitignore  BUILD  CONTRIBUTING.md  Cargo.toml  Delete README.md  README.md  WORKSPACE  boost_exception.cc  plugins.bzl
callouts/rust/: Cargo.toml  README.md  build.rs
callouts/rust/extproc/: Cargo.toml  Dockerfile  build.rs
callouts/rust/src/: lib.rs  main.rs  processor.rs  service.rs
plugins/: .bazelrc  BUILD  Cargo.toml  Dockerfile  README.md  WORKSPACE  plugin_rust.wasm  plugins.bzl  quiche.patch
plugins/bazel/cargo/: BUILD  Cargo.toml
plugins/samples/: README.md
plugins/samples/ab_testing/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/ad_insertion/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.config  tests.textpb
plugins/samples/add_custom_response/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/add_device_type/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/add_geo_query/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/add_header/: BUILD  plugin.cc  plugin.go  plugin.rs  test.cc  tests.textpb
plugins/samples/add_request_header/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb  tests.yaml
plugins/samples/add_response_header/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  plugin_cpp.wasm  tests.textpb  tests.yaml
plugins/samples/block_request/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/body_chunking/: BUILD  README.md  expected_request_body.data  plugin.cc  plugin.go  tests.textpb  tests.yaml
plugins/samples/body_processing/: BUILD  plugin.cc  tests.textpb
plugins/samples/cdn_token_generator/: BUILD  README.md  cdn_token_config.proto  config.data  config.json  plugin.cc  plugin.go  plugin.rs  setup.sh  tests.textpb  tests_config.textpb
plugins/samples/check_pii/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/chunking_body/: BUILD  plugin.cc  tests.textpb
plugins/samples/config_denylist/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  test.cc  tests.config  tests.textpb  tests_noconfig.textpb
plugins/samples/configurable_body_modification/: BUILD  plugin.cc  tests.textpb
plugins/samples/content_injection/: BUILD  README.md  expected_response_body.data  expected_response_body1.data  expected_response_body25.data  expected_response_body50.data  plugin.rs  response_body.data  response_body1.data  response_body25.data  response_body50.data  temp.txt  tests.textpb
plugins/samples/docs_first_plugin/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/docs_plugin_config/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.config  tests.textpb
plugins/samples/domain_rewrite/: plugin.rs  tests.textpb
plugins/samples/drafting_jwt_token/: BUILD  Cargo.toml  Makefile  config.data  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/enable_recaptcha/: BUILD  README.md  action_key.config  action_key_expected_response_body.data  action_tests.textpb  expected_response_body.data  plugin.rs  response_body.data  session_key.config  session_key_expected_response_body.data  session_tests.textpb  tests.textpb
plugins/samples/error_page_with_traceid/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/geo_directional_origin/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/hello_world/: BUILD  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/hello_world_plugin/: plugin.cc
plugins/samples/hmac_authcookie/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/hmac_authtoken/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/hmac_token_validation/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/html_domain_rewrite/: BUILD  README.md  plugin.rs  tests.textpb
plugins/samples/http_redirect/: BUILD  plugin.rs  tests.textpb
plugins/samples/immediate_response/: BUILD  plugin.cc  tests.textpb
plugins/samples/jwt_auth/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb  tests_rust.textpb
plugins/samples/lexbor_test/: BUILD  plugin.cc  tests.textpb
plugins/samples/local_reply/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/log_calls/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/log_query/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs
plugins/samples/lol_html/: BUILD  plugin.rs
plugins/samples/mcp_translation/: BUILD  plugin.rs  tests.textpb
plugins/samples/noop_logs/: plugin.cc  plugin.rs  tests.textpb
plugins/samples/normalize_header/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/overwrite_errcode/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/overwrite_header/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/query_log/: plugin.cc  plugin.rs  tests.textpb
plugins/samples/redirect/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/redirect_bulk/: BUILD  README.md  config.data  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/regex_rewrite/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  test.cc  tests.textpb
plugins/samples/remove_cookie/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/set_cookie/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/set_query/: BUILD  README.md  plugin.cc  plugin.go  plugin.rs  tests.textpb
plugins/samples/set_reset_cookie/: BUILD  cookie_config.proto  example_config.proto  plugin.cc  plugin.go  plugin.rs  tests.config  tests.textpb  (+1 more)
plugins/test/: BUILD  dynamic_test.cc  dynamic_test.h  framework.cc  framework.h  runner.proto  runner_main.cc  sample.textpb  yaml_proto_converter.cpp  yaml_proto_converter.h
(+807 files in other folders)
