[package]
name = "service-extensions-samples"
version = "0.0.0"

[dependencies]
log = "0.4"
regex = "1.9"
url = "2.4"
proxy-wasm = "0.2.1"

# Mandatory for cargo-raze
[lib]
path = "fake_lib.rs"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"


# To regenerate Cargo Bazel rules based on the above:
#
#  $ pushd cargo/raze
#  $ bazelisk run @cargo_raze//:raze --
#     --generate-lockfile --manifest-path=$(realpath ../../Cargo.toml)
#  $ popd
#
# More docs: https://github.com/google/cargo-raze
#
[package.metadata.raze]
workspace_path = "//cargo"
package_aliases_dir = "cargo/"
targets = [
    "wasm32-unknown-unknown",
    "wasm32-wasi",
]
genmode = "Remote"
