[package]
name = "service-extensions"
version = "0.0.0"
edition = "2018"

# Regenerate: $ CARGO_BAZEL_REPIN=1 bazelisk build //...
# Reference: @crate_index//:proxy-wasm (etc)
[dependencies]
proxy-wasm = "0.2.1"
log = "0.4"
regex = "1.9"
url = "2.4"
jwt-compact = { version = "0.8.0", default-features = false, features = ["std", "rsa"] }
rsa = "0.9.6"

[lib]
crate-type = ["cdylib"]
path = "samples/.../plugin.rs"  # dummy value for Bazel

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
