[package]
name = "service-extensions"
version = "0.0.0"
edition = "2018"

# Regenerate: $ CARGO_BAZEL_REPIN=1 bazelisk build //...
# Reference: @crate_index//:proxy-wasm (etc)
[dependencies]
proxy-wasm = "0.2.1"
log = "0.4"
regex = "1.9"
url = "2.4"
cookie = "0.18.1"
sha2 = "0.10.8"
hmac = "0.12.1"
hex = "0.4.3"

[lib]
crate-type = ["cdylib"]
path = "samples/.../plugin.rs"  # dummy value for Bazel

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
