[package]
name = "envoy-ext-proc"
version = "0.1.0"
edition = "2021"
authors = ["author"]
description = "Envoy External Processing Filter SDK in Rust"
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
async-stream = "0.3"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }
walkdir = "2.4"

[lib]
name = "ext_proc"
path = "src/lib.rs"

# Examples
[[example]]
name = "add-header"
path = "examples/add-header/main.rs"

[[example]]
name = "redirect"
path = "examples/redirect/main.rs"