[package]
name = "service-extensions"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.10", features = ["tls", "transport"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
hyper = { version = "0.14", features = ["full"] }
jsonwebtoken = "8.3"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[build-dependencies]
tonic-build = { version = "0.10", features = ["prost"] }

[lib]
name = "ext_proc"
path = "src/lib.rs"
doctest = false

# Examples
[[example]]
name = "add_header"
path = "examples/add_header/main.rs"

[[example]]
name = "add_body"
path = "examples/add_body/main.rs"

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[[example]]
name = "redirect"
path = "examples/redirect/main.rs"

[[example]]
name = "jwt_auth"
path = "examples/jwt_auth/main.rs"