[package]
name = "service-extensions"
version = "0.0.0"
edition = "2018"

# Regenerate: $ bazelisk run bazel/cargo:crates_vendor -- --repin
# Reference: //bazel/cargo/remote:proxy-wasm (etc)
[dependencies]
proxy-wasm = "0.2.1"
log = "0.4"
regex = "1.9"
url = "2.4"
# Pin version 2.0.0 until rust-version includes https://github.com/rust-lang/rust/issues/119128
lol_html = "=2.0.0"
uuid = { version = "1.12.1", features = [ "v4" ] }
base64 = "0.21.0"
hmac = "0.12.1"
sha2 = "0.10.6"

[lib]
crate-type = ["cdylib"]
path = "samples/.../plugin.rs"  # dummy value for Bazel

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
